keycloak-faf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.3.3

        args:
          - start
          - --import-realm

        volumeMounts:
          - name: realm-import
            mountPath: /opt/keycloak/data/import
            readOnly: true

      volumes:
        - name: realm-import
          configMap:
            name: keycloak-realm-import
