keycloak-faf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak

  ports:
    - port: 8080
      targetPort: 8080
